yamls/counter-pod-log.yaml
apiVersion: v1
kind: Pod
metadata:
  name: counter
spec:
  volumes:
  - name: log
    emptyDir: {}
  containers:
  - name: logger
    image: busybox
    volumeMounts:
    - name: log
      mountPath: /var/log
    args:
    - /bin/sh
    - -c
    - "tail -f /var/log/1.log"
  - name: count
    image: busybox
    volumeMounts:
    - name: log
      mountPath: /var/log
    args:
    - /bin/sh
    - -c
    - >
      i=0;
      while true;
      do
        echo "$i: $(date)" >> /var/log/1.log;
        echo "$(date) INFO $i" >> /var/log/2.log;
        i=$((i+1));
        sleep 1;
      done
