yamls/date-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busy
  name: busy
spec:
  containers:
  - args:
    - sh
    - -c
    - while true;do date;sleep 1;done;
    image: busybox
    name: busy
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
