yamls/secretmount.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: secretmount
  name: secretmount
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secretmount
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: secretmount
    spec:
      volumes:
      - name: sec
        secret:
          secretName: web
      containers:
      - image: busybox
        name: busybox
        command: ["cat", "/se/web.yaml"]
        volumeMounts:
        - name: sec
          readOnly: true
          mountPath: /se
status: {}
